test_suite/tests/ui/inject_scope/unknown_scope.rs
use dilib::{Singleton, Injectable};

#[derive(Injectable)]
struct MyStruct {
    #[inject(scope="unique")]
    a: Singleton<usize>,
}

fn main(){}